--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "pg": "^8.10.0",
     "remult": "^0.18.0",
     "rxjs": "~7.8.0",
@@ -32,6 +34,7 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
