atualização na escola

--- a/db/tasks.json
+++ b/db/tasks.json
@@ -1,7 +1,7 @@
 [
   {
-    "id": "42be68ee-4a48-40ad-a749-f799b938ab35",
-    "title": "ssssss",
-    "completed": false
+    "id": "f693564d-9f71-4508-85fb-027d358d4bce",
+    "title": "aaaaaa",
+    "completed": true
   }
 ]
