--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.2.3",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
